--- a/style.css
+++ b/style.css
@@ -119,7 +119,34 @@ li {
 
 .mid-body-1 {
     background-color: white;
+    margin: 20px;
+    font-weight: 600;
+    font-size: 36px;
+    color: #1F2937;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
+
+.squares-section {
+    display: flex;
+    flex-direction: row;
+}
+
+.square-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.square {
+    border: 5px;
+    border-radius: 8px;
+    width: 40px;
+    height: 40px;
+    border-color:#3882f6;
+    background-color: white;
+}
+
 
 .mid-body-2 {
     background-color: #E5E7EB;
