--- a/style.css
+++ b/style.css
@@ -163,9 +163,16 @@ li {
     font-size: 11px;
 }
 
+.background-mid-2 {
+    background-color: #E5E7EB;
+    width: 100%;
+}
 
 .mid-body-2 {
-    background-color: #E5E7EB;
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
 }
 
 .bottom-body {
