--- a/style.css
+++ b/style.css
@@ -167,14 +167,16 @@ li {
 .background-mid-2 {
     background-color: #E5E7EB;
     width: 100%;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .mid-body-2 {
     color: #1F2937;
     font-size: 36px;
     font-style: italic;
-    font-weight: 100;
+    font-weight: 300;
     width: 900px;
     text-align: center;
 }
@@ -187,8 +189,40 @@ li {
     font-weight: bold;
 }
 
-.bottom-body {
+.background-bottom {
     background-color: white;
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom-body {
+    background-color: #3882f6;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 900px;
+    color: #F9FAF8;
+    height: 100px;
+}
+
+.paragraph-header {
+    font-size: 20px;
+    font-weight: 800;
+}
+
+.bottom-body p {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-end: 0;
+    margin-inline-start: 0;
+}
+
+.bottom-body signup-button {
+    border: 3px solid #F9FAF8;
 }
 
 .footer-info {
