--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ li {
 
 .bottom-body {
     background-color: #3882f6;
+    border-radius: 8px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -221,10 +222,16 @@ li {
     margin-inline-start: 0;
 }
 
-.bottom-body signup-button {
+.bottom-body .signup-button {
     border: 3px solid #F9FAF8;
 }
 
 .footer-info {
     background-color:#1F2937;
+    height: 100px;
+    color: #F9FAF8;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
