Fixed bug causing all area under footer to be white

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     font-family: 'Roboto';
     justify-content: center;
+    background-color: #1F2937
 }
 
 .background-top {
